#5 code review fixes